# ChangeLog for app-xemacs/elib
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/elib/ChangeLog,v 1.13 2008/03/19 19:29:19 graaff Exp $

  19 Mar 2008; Hans de Graaff <graaff@gentoo.org> metadata.xml:
  A herd should not be listed as maintainer

  25 Oct 2007; Hans de Graaff <graaff@gentoo.org> -elib-1.10.ebuild:
  Remove old version

  03 Jun 2007; Hans de Graaff <graaff@gentoo.org> elib-1.11.ebuild:
  Stable on amd64, ppc, ppc64, sparc, x86 as per #175560

  29 May 2007; Raúl Porcel <armin76@gentoo.org> elib-1.11.ebuild:
  alpha stable wrt #175560

*elib-1.11 (11 Nov 2006)

  11 Nov 2006; Hans de Graaff <graaff@gentoo.org> +metadata.xml,
  +elib-1.11.ebuild:
  Version bump; add metadata.

  29 Sep 2005; Joseph Jezak <josejx@gentoo.org> elib-1.10.ebuild:
  Marked ppc stable.

  09 Aug 2004; Tom Gall <tgall@gentoo.org> elib-1.10.ebuild:
  stable on ppc64

  02 Oct 2003; Aron Griffis <agriffis@gentoo.org> elib-1.10.ebuild:
  Stable on alpha

*elib-1.10 (16 Dec 2002)

  22 Feb 2003;  <rendhalver@gentoo.org> elib-1.10.ebuild :
  Add ~alpha to KEYWORDS

  16 Dec 2002; Rendhalver [Peter Brown] <rendhalver@gentoo.org> :
  Initial import.