@@ -1,6 +1,11 @@
 # ChangeLog for app-xemacs/elib
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-xemacs/elib/ChangeLog,v 1.13 2008/03/19 19:29:19 graaff Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-xemacs/elib/ChangeLog,v 1.14 2009/02/22 13:37:20 graaff Exp $
+
+*elib-1.13 (22 Feb 2009)
+
+  22 Feb 2009; Hans de Graaff <graaff@gentoo.org> +elib-1.13.ebuild:
+  Version bump with inclusion of unique.el and fixed dependencies.
 
   19 Mar 2008; Hans de Graaff <graaff@gentoo.org> metadata.xml:
   A herd should not be listed as maintainer
